[project]
name = "appagent"
version = "0.1.0"
description = "appagent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "colorama>=0.4.6",
    "dashscope>=1.22.2",
    "opencv-python>=4.11.0.86",
    "pyshine>=0.0.9",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
